# concordium-hackaton

./: .gitignore  README.md
dapp/: index.html  package.json
dapp/src/: App.tsx  Contract.tsx  WalletConnectorButton.tsx  config.ts  main.tsx
test/: Cargo.toml  test.wasm
test/src/: lib.rs
